src/styles/index.scss
@import 'normalize';

/* purgecss start ignore */

$white: #ffffff;
$black: #000000;
$gray: #9ca3af;

$bg-white: #effcf9;
$fg-white: #ffffff;
$bg-black: #111111;
$fg-black: #191919;

$accent-black: #000000;
$accent-gray: #d5d5d5;
$accent-green: #64ebcd;
$accent-green-dark: #4de8c6;

html,
body {
	height: 100%;
	overflow: hidden;
}

body,
input,
textarea {
	font-family: 'IBM Plex Mono', sans-serif;
	font-style: normal;
}

input,
textarea {
	&:focus {
		outline: none;
	}
}

textarea {
	resize: none;
}

button {
	cursor: pointer;
}

@keyframes slideIn {
	0% {
		transform: translateY(200px);
		opacity: 0;
	}
	100% {
		transform: translateY(0);
		opacity: 1;
	}
}

@keyframes slideIn1 {
	0% {
		transform: translateY(12px);
	}
	100% {
		transform: translateY(-6px);
	}
}

@keyframes slideIn2 {
	0% {
		transform: translateY(12px);
	}
	100% {
		transform: translateY(-12px);
	}
}

#email-window,
#email-header,
#email-compose,
#email-body,
#email-window:before,
#email-window:after {
	background-color: $white;
}

#email-window {
	border: 1px solid $accent-gray;
	width: 90%;
	height: 100%;
	margin-left: auto;
	margin-right: auto;
	display: flex;
	flex-direction: column;
	max-width: 67rem;
	border-top: 0;
	position: relative;
	border-radius: 0;
	z-index: 99;
	min-height: 80vh;
	animation: 0.3s ease 0s 1 slideIn;
	animation-fill-mode: forwards;
	transition: background-color 0.2s ease;
	margin-top: 5rem;

	&:before {
		border: 1px solid $accent-gray;
		content: '';
		height: 100%;
		position: absolute;
		width: calc(100% - 12px);
		animation: 0.3s ease 0s 1 slideIn1;
		animation-delay: 0.3s;
		animation-fill-mode: forwards;
		height: 100%;
		top: 0;
		left: 6px;
		z-index: -1;
	}

	@media (min-width: 480px) {
		margin-top: 9.5rem;

		&:before,
		&:after {
			content: '';
			height: 100%;
			border: 1px solid $accent-gray;
			position: absolute;
		}

		&:after {
			animation: 0.3s ease 0s 1 slideIn2;
			animation-delay: 0.5s;
			animation-fill-mode: forwards;
			width: calc(100% - 24px);
			height: 100%;
			top: 0;
			left: 12px;
			z-index: -2;
		}
	}

	@media (min-width: 1920px) {
		max-width: 86rem;
	}
}

#email-header {
	padding: 1rem;
	display: flex;
	justify-content: center;
	align-items: center;
	align-items: center;
	text-align: center;
	position: relative;
	border-bottom: 1px solid $accent-gray;
	border-top: 1px solid $accent-gray;
	transition: all 0.2s ease;
}

#email-compose {
	border-bottom-width: 1px;
	border-bottom-style: solid;
	border-color: $accent-gray;
	transition: all 0.2s ease;
}

#mailto-link-container {
	position: absolute;
	width: 100%;
	display: flex;
	padding-left: 0.5rem;
	padding-right: 0.5rem;
	justify-content: center;
	visibility: hidden;
	height: 0;
	width: 0;
	bottom: 2rem;
	transform: translateY(8rem);
	transition: transform 0.2s ease;
	margin: auto;
	z-index: 200;

	#mailto-link {
		display: none;
	}

	&.active {
		visibility: visible;
		height: auto;
		width: 100%;
		transform: translateY(0);

		#mailto-link {
			display: flex;
		}
	}
}

#mailto-link {
	font-size: 0.875rem;
	color: $white;
	background-color: $bg-black;
	border-radius: 9999px;
	font-weight: 700;
	border-color: $white;
	flex-direction: row;
	align-items: center;
	justify-content: space-between;
	transition: all 0.2s ease;
	box-shadow: 0 10px 40px 0 rgba(17, 38, 57, 0.4);
	padding: 0.45rem 0.45rem 0.45rem 1.5rem;
	width: fit-content;
	max-width: 60%;

	@media (min-width: 480px) {
		font-size: 1rem;
	}

	@media (min-width: 1920px) {
		max-width: 500px;
	}
}

#mailto-text {
	width: 100%;
	display: inline-block;
	white-space: nowrap;
	line-height: 1.5;
	overflow: hidden;
	text-overflow: ellipsis;
}

#cc-button,
#bcc-button {
	background-color: transparent;
	font-size: 1rem;
	font-weight: 600;
	border-radius: 0.25rem;
	padding: 0.5rem;
	text-align: center;
	display: inline-block;
	width: 3rem;
	transition-property: all;
	transition-timing-function: ease;
	transition-duration: 100ms;

	@media (min-width: 480px) {
		width: 60px;
	}

  &:focus-visible,
  &:focus-within,
  &:focus {
    outline: 2px solid $accent-green;
    border: none;
  }

	@apply border border-accent-gray dark:border-black text-gray border-solid hover:bg-[#1e1e1e] dark:hover:bg-white hover:text-white dark:hover:text-[#1e1e1e] hover:border-[#1e1e1e] dark:hover:border-white;
}

#copy-code {
	color: $bg-black;
	border-radius: 9999px;
	font-weight: 600;
	margin-left: 0.5rem;
	text-decoration: none;
	text-align: center;
	display: inline-block;
	background-color: $accent-green;
	transition: all 0.2s ease;
	transform: scale(1);
	line-height: 40px;
	padding-left: 1rem;
	padding-right: 1rem;
	white-space: nowrap;
	border: none;

	&:hover,
	&:focus {
		background-color: $accent-green-dark;
	}

	&:hover {
		transform: scale(0.98);
	}

	&:active {
		transform: scale(1.05);
	}
}

body {
	background-image: url('/tile.svg');
	background-repeat: repeat;
	background-size: 60%;
	background-position: -3px -45%;
	background-color: $bg-white;
	transition: background-color 0.2s ease;

	@media (min-width: 480px) {
		background-size: 15%;
		background-position: -3px -3px;
	}

	@media (min-width: 1920px) {
		background-size: 10%;
	}
}

::selection {
	color: $white;
	background-color: $accent-green;
}

:root[theme='dark'] {
	body,
	input,
	textarea {
		color: $white;
	}
	body {
		background-image: url('/tile-dark.svg');
		background-color: $bg-black;
	}
	#email-window,
	#email-header,
	#email-compose,
	#email-body,
	#email-window:before,
	#email-window:after {
		border-color: $black;
		background-color: $fg-black;
	}
	#email-header {
		color: $white;
	}
	#mailto-link {
		background-color: $white;
		color: $bg-black;
		box-shadow: none;
	}
}

@media (prefers-reduced-motion: reduce) {
	*,
	*:before,
	*:after {
		animation: none !important;
		transition: none !important;
	}

	#email-window {
		&:before {
			content: '';
			top: -6px;
		}
		&:after {
			content: '';
			top: -12px;
		}
	}
}

@tailwind base;
@tailwind components;
@tailwind utilities;

